$Id$
Version 1.1.3+CVS (?? ??? 2006)
 - Security patch: don't allow URL to set 'noset', which allows users
   to then set other global variables.
 - Fixed bug [ 1657494 ] Unable to repeat events by slecting months
 - Fixed bug [ 1654078 ] cannot managed 'public access' without using 'top-menue'
 - Fixed bug [ 1657946 ] little thick squares at layered events at month.php
 - Fixed bug [ 1657794 ] missing seperate line between sort-header and tasks
 - Fixed bug [ 1657789 ] 'due-dates' are not displayed at the 'little-task-list'
 - Fixed bug [ 1606260 ] no sunday not in view: WEEK (users vertical)
 - Fixed bug [ 1652424 ] no/little clues on actual user when viewing other's cal
 - Fixed bug [ 1650891 ] Including apostrophe (') in report name breaks top menu.
 - Fixed bug [ 1650140 ] Cannot export other user's calendars
 - Fixed bug [ 1603601 ] priority in 'small-task-list' will not be sorted correctly
 - Fixed bug [ 1636405 ] Public Acces not avail in e.g. layers ...
 - Fixed bug [ 1636045 ] Public Access: only part of events visible, and only owner..
 - Fixed bug [ 1636635 ] detailed view of a layered event at public access is not
 - Fixed bug [ 1646854 ] Using UAC public access events are not shown at the calendar
 - Fixed bug [ 1647427 ] some events not visible in March week view
 - Fixed bug [ 1647726 ] double entries shown at 'system settings' admin.php
 - Fixed bug [ 1645985 ] cal_location limited to varchar(50)
 - Fixed bug [ 1637253 ] After importiong Outlook CSV file, Reminders not set
 - Added option to display end times in calendars
 - Fixed bug [ 1643240 ] 'about.php' cannot be used if using NO 'Top-Menu'
 - Fixed bug [ 1638019 ] Annual repeating events for the last day in Feb don't appear
 - Fixed bug [ 1636312 ] Notice: Undefined index: USER_PUBLISH_ENABLED
 - Fixed bug [ 1636026 ] missing user= in weekview links for other user's cal
 - Added VTIMEZONE capture and reuse logic
 - Added CAPTCHA validation option  to Public Access event creation