@@ -1,5 +1,6 @@
 $Id$
 Version 1.1.3+CVS (?? ??? 2006)
+ - Fixed logic error: $translations_loaded was being set = true before it actually was.
  - Security patch: don't allow URL to set 'noset', which allows users
    to then set other global variables.
  - Fixed bug [ 1657494 ] Unable to repeat events by slecting months
